[fix] scrollbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -97,7 +97,8 @@ body {
   &--buy {
     width: 200px;
     height: 47px;
-    background: linear-gradient(2deg, #0b729f -108.41%, #7302ee -12.71%, #00b3ff 98.62%, #03b0fb 98.62%);
+    // background: linear-gradient(2deg, #0b729f -108.41%, #7302ee -12.71%, #00b3ff 98.62%, #03b0fb 98.62%);
+    background: linear-gradient(7deg, #252b7e -5.12%, #6e31dc 32.09%, #932fff 62.48%, #36e7ff 137.94%);
     border-radius: 14px;
 
     font-family: var(--main-font);
@@ -125,7 +126,8 @@ body {
       top: -2px;
 
       border-radius: 16px;
-      border: 1px solid #364ea4;
+      // border: 1px solid #364ea4;
+      border: 1px solid #8630e8;
     }
     &::after {
       content: "";
